// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package userService;
option go_package = ".;userService";

message Session {
  string session = 1;
}

message User {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 5;
  uint64 uid = 6;
}

message RegisterRequest {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 5;
}

message RegisterResponse {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  uint64 uid = 4;
}


service UserService{
  rpc Register(RegisterRequest) returns (RegisterResponse);
}